# dpdm-fast

./: .gitignore  Cargo.toml  Makefile.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: dpdm.js
src/: lib.rs  main.rs
src/node_resolve/: lib.rs  mod.rs  node_builtins.rs
src/nodejs/: fs.js
src/parser/: analyze_file.rs  dependenct_collector.rs  mod.rs  parse_tree_recursive.rs  parser.rs  strip_type_only_imports.rs  types.rs
src/utils/: alias.rs  mod.rs  node.rs  options.rs  pretty.rs  resolver.rs  shorten.rs  tree.rs
