[package]
name = "dpdm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] } # 用于命令行参数解析
glob = "0.3" # 用于文件路径匹配
serde_json = "1.0" # 用于 JSON 处理
tokio = { version = "1.0", features = ["full"] }
regex = "1"
swc_core = { version = "31.0.1", features = [
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_utils",
  "ecma_ast",
] }
serde = "1.0"
futures = "0.3"
lazy_static = "1.5.0"
cross = "0.2"
spinoff = "0.8.0"
colored = "2.1"
dashmap = "6.1.0"
