[package]
name = "dpdm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dpdm"
path = "src/main.rs"

[features]
default = ["bin"]
bin = [
  "clap",
  "glob",
  "tokio",
  "swc_core",
  "futures",
  "cross",
  "spinoff",
  "dashmap",
  "colored",
]
wasm = [
  "wasm-bindgen",
  "swc_core",
  "glob",
  "colored",
  "dashmap",
  "spinoff",
  "futures",
  "wasm-bindgen-futures",
  "js-sys",
]

[dependencies]
# 公共依赖（native + wasm 都会用）
serde = "1.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.5.0"


# 二进制独有
colored = { version = "2.1", optional = true }
clap = { version = "4.5.17", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
swc_core = { version = "31.0.1", features = [
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_utils",
  "ecma_ast",
], optional = true }
futures = { version = "0.3", optional = true }
cross = { version = "0.2", optional = true }
spinoff = { version = "0.8.0", optional = true }
dashmap = { version = "6.1.0", optional = true }

# wasm 独有
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
js-sys = { version = "0.3.77", optional = true }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[dependencies.log]
version = "0.4"
